# SpreadMagic

./: README.md  pyproject.toml
spreadmagic/: __init__.py  spreadmagic.py
