[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spreadmagic"
version = "2.0.0"
description = "This Python package is a magic command that executes Python code in code cells on Jupyter and Google Colab using PyScript within an iframe."
readme = "README.md"
authors = [
  {name = "Uniras"},
  {email = "tkappeng@gmail.com"}
]
license = {text = "MIT License"}
keywords = ["PyScript", "jupyter", "magic", "colab", "iframe", "jspreadsheet"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/uniras/SpreadMagic"
Repository = "https://github.com/uniras/SpreadMagic"
